--- a/popup.html
+++ b/popup.html
@@ -7,704 +7,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <style>
-    :root {
-      /* Light Mode - AI-Native Palette */
-      --primary: #2563EB;
-      --primary-hover: #1d4ed8;
-      --secondary: #3B82F6;
-      --accent: #F97316;
-      --bg-body: #F8FAFC;
-      --bg-card: #FFFFFF;
-      --text-main: #1E293B;
-      --text-sub: #64748B;
-      --border: #E2E8F0;
-      --success: #10B981;
-      --warning: #F59E0B;
-      --danger: #EF4444;
-      --radius: 6px;
-
-      /* New Vars for Tables & Notes */
-      --bg-header: #f1f5f9;
-      --border-table: #cbd5e1;
-      --bg-note: #f8fafc;
-      --bg-note: #f8fafc;
-      --text-note: #64748b;
-
-      /* Links & Status */
-      --link-color: #2563EB;
-      --status-success: #166534;
-      --status-info: #2563EB;
-      --status-warning: #d97706;
-      --status-error: #dc2626;
-
-      /* Shadows */
-      --shadow-sm: 0 1px 2px rgba(0, 0, 0, 0.05);
-      --shadow-md: 0 4px 6px rgba(0, 0, 0, 0.1);
-      --shadow-lg: 0 10px 15px rgba(0, 0, 0, 0.1);
-    }
-
-    html[data-theme="dark"] {
-      /* Dark Mode - AI-Native Palette */
-      --primary: #3B82F6;
-      --primary-hover: #60A5FA;
-      --secondary: #60A5FA;
-      --accent: #FB923C;
-      --bg-body: #0F172A;
-      --bg-card: #1E293B;
-      --text-main: #F1F5F9;
-      --text-sub: #94A3B8;
-      --border: #334155;
-      --success: #34D399;
-      --warning: #FBBF24;
-      --danger: #F87171;
-
-      /* Dark Mode Tables & Notes */
-      --bg-header: #1e293b;
-      --border-table: #334155;
-      --bg-note: #1e293b;
-      --bg-note: #1e293b;
-      --text-note: #94a3b8;
-
-      /* Links & Status */
-      --link-color: #60A5FA;
-      --status-success: #34D399;
-      --status-info: #60A5FA;
-      --status-warning: #FBBF24;
-      --status-error: #F87171;
-
-      /* Shadows for dark mode */
-      --shadow-sm: 0 1px 2px rgba(0, 0, 0, 0.3);
-      --shadow-md: 0 4px 6px rgba(0, 0, 0, 0.4);
-      --shadow-lg: 0 10px 15px rgba(0, 0, 0, 0.5);
-    }
-
-    html {
-      transition: background-color 0.3s ease, color 0.3s ease;
-    }
-
-    * {
-      box-sizing: border-box;
-      outline: none;
-    }
-
-    body {
-      width: 400px;
-      margin: 0;
-      font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: var(--bg-body);
-      color: var(--text-main);
-      font-size: 13px;
-      transition: background-color 0.3s ease, color 0.3s ease;
-    }
-
-    /* --- TABS --- */
-    .tabs {
-      display: flex;
-      background: var(--bg-card);
-      border-bottom: 1px solid var(--border);
-      position: sticky;
-      top: 0;
-      z-index: 10;
-      box-shadow: var(--shadow-sm);
-    }
-
-    .tab-btn {
-      flex: 1;
-      padding: 10px 0;
-      cursor: pointer;
-      text-align: center;
-      font-weight: 600;
-      color: var(--text-sub);
-      border-bottom: 2px solid transparent;
-      transition: background-color 0.2s, color 0.2s, border-color 0.2s;
-      user-select: none;
-    }
-
-    .tab-btn:hover {
-      background: #f1f5f9;
-      color: var(--primary);
-    }
-
-    .tab-btn.active {
-      color: var(--primary);
-      border-bottom-color: var(--primary);
-      background: #fff;
-    }
-
-    /* --- LAYOUT --- */
-    .tab-content {
-      display: none;
-      padding: 12px;
-      animation: fadeIn 0.2s;
-    }
-
-    .tab-content.active {
-      display: block;
-    }
-
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: translateY(2px);
-      }
-
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    .group-box {
-      background: var(--bg-card);
-      border: 1px solid var(--border);
-      border-radius: var(--radius);
-      padding: 12px;
-      margin-bottom: 10px;
-      box-shadow: var(--shadow-sm);
-    }
-
-    .group-title {
-      font-weight: 700;
-      font-size: 12px;
-      color: var(--text-main);
-      text-transform: uppercase;
-      margin-bottom: 8px;
-      border-bottom: 1px solid var(--border);
-      padding-bottom: 4px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    /* --- FORM ELEMENTS --- */
-    input:not([type="radio"]):not([type="checkbox"]),
-    select {
-      width: 100%;
-      padding: 8px;
-      border: 1px solid var(--border);
-      border-radius: var(--radius);
-      margin-bottom: 8px;
-      font-size: 13px;
-      transition: border 0.2s, background-color 0.2s, color 0.2s;
-      background: var(--bg-card);
-      color: var(--text-main);
-    }
-
-    input:focus,
-    select:focus {
-      border-color: var(--primary);
-      box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.1);
-    }
-
-    input:focus-visible,
-    select:focus-visible {
-      outline: 2px solid var(--primary);
-      outline-offset: 2px;
-    }
-
-    /* --- BUTTONS --- */
-    .btn-main {
-      width: 100%;
-      padding: 10px 16px;
-      border: none;
-      border-radius: var(--radius);
-      font-weight: 600;
-      cursor: pointer;
-      color: white;
-      background: linear-gradient(135deg, var(--primary), var(--secondary));
-      transition: background-color 0.2s, box-shadow 0.2s, transform 0.1s;
-      margin-top: 4px;
-      user-select: none;
-
-      /* Center text */
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 6px;
-      text-align: center;
-    }
-
-    .btn-main:hover {
-      background: linear-gradient(135deg, var(--primary-hover), var(--primary));
-      box-shadow: var(--shadow-md);
-      transform: translateY(-1px);
-    }
-
-    .btn-main:active {
-      transform: translateY(0);
-    }
-
-    .btn-main:focus-visible {
-      outline: 2px solid var(--primary);
-      outline-offset: 2px;
-    }
-
-    /* Resume/Stop Small Variants */
-    .btn-sm {
-      padding: 6px 10px !important;
-      font-size: 12px !important;
-      width: auto !important;
-    }
-
-    .btn-wrapper {
-      display: flex;
-      gap: 5px;
-      margin-top: 5px;
-      justify-content: space-between;
-      /* Spread them out or keep start? User said "to bé" -> make smaller */
-    }
-
-    .btn-pause {
-      background: var(--warning);
-      display: none;
-      flex: 1;
-    }
-
-    .btn-stop {
-      background: var(--danger);
-      display: none;
-      width: 80px;
-    }
-
-    /* --- STANDARD CONTROLS (v3.0.6) --- */
-    .control-row {
-      display: flex;
-      gap: 8px;
-      margin-bottom: 8px;
-    }
-
-    .input-std {
-      flex: 1;
-      height: 36px;
-      padding: 0 10px;
-      border: 1px solid var(--border);
-      border-radius: var(--radius);
-      font-size: 13px;
-      transition: all 0.2s;
-      background: var(--bg-card);
-      color: var(--text-main);
-      margin-bottom: 0;
-      /* Override default */
-    }
-
-    .input-std:focus {
-      border-color: var(--primary);
-      box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.1);
-    }
-
-    html[data-theme="dark"] .input-std {
-      background: var(--bg-body);
-      color: var(--text-main);
-      border-color: var(--border);
-    }
-
-    .btn-std {
-      height: 36px;
-      padding: 0 16px;
-      border: none;
-      border-radius: var(--radius);
-      font-weight: 600;
-      cursor: pointer;
-      color: white;
-      background: linear-gradient(135deg, var(--primary), var(--secondary));
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      gap: 6px;
-      transition: all 0.2s;
-      font-size: 13px;
-      white-space: nowrap;
-    }
-
-    .btn-std:hover {
-      box-shadow: var(--shadow-md);
-      transform: translateY(-1px);
-    }
-
-    .btn-std.btn-icon-only {
-      width: 36px;
-      padding: 0;
-      font-size: 18px;
-    }
-
-    /* --- ACTION BUTTONS --- */
-    .btn-icon {
-      /* Deprecated: Use btn-action or btn-std */
-      width: 24px;
-      height: 24px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      color: white;
-      display: inline-flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 12px;
-      margin-left: 2px;
-      transition: background-color 0.2s, transform 0.1s;
-      user-select: none;
-    }
-
-    .btn-icon:hover {
-      transform: translateY(-1px);
-    }
-
-    .btn-icon:active {
-      transform: translateY(0);
-    }
-
-    .btn-icon:focus-visible {
-      outline: 2px solid var(--primary);
-      outline-offset: 2px;
-    }
-
-    .btn-up,
-    .btn-down {
-      background: #94a3b8;
-    }
-
-    .btn-up:hover,
-    .btn-down:hover {
-      background: #64748b;
-    }
-
-    .btn-edit {
-      background: var(--warning);
-    }
-
-    .btn-edit:hover {
-      background: #d97706;
-    }
-
-    .btn-del {
-      background: var(--danger);
-    }
-
-    .btn-del:hover {
-      background: #dc2626;
-    }
-
-    .btn-add {
-      background: var(--success);
-      /* Override specifically for add button to match standard if needed, or remove to use btn-std */
-      width: 36px;
-      height: 36px;
-      font-size: 18px;
-      margin-bottom: 0;
-    }
-
-    /* --- LIST ITEMS --- */
-    .list-item {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 8px;
-      padding: 8px;
-      background: var(--bg-card);
-      border: 1px solid var(--border);
-      border: 1px solid var(--border);
-      margin-bottom: 4px;
-      border-radius: var(--radius);
-    }
-
-    .list-item.selected {
-      border-left: 3px solid var(--primary);
-      background: var(--bg-body);
-      /* Slightly different than card */
-    }
-
-    .item-actions {
-      display: flex;
-      gap: 4px;
-    }
-
-    .btn-action {
-      width: 28px;
-      height: 28px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      color: white;
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      transition: transform 0.1s;
-    }
-
-    .btn-action:hover {
-      transform: scale(1.05);
-    }
-
-    .btn-action:active {
-      transform: scale(0.95);
-    }
-
-    /* --- MODE SELECTOR (Radio Group) --- */
-    .mode-label {
-      flex: 1;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      /* Center content */
-      gap: 5px;
-      /* Close to checkbox */
-      cursor: pointer;
-      white-space: nowrap;
-      padding: 6px 0;
-      border-radius: 4px;
-      background: var(--bg-card);
-      border: 1px solid var(--border);
-      font-size: 13px;
-      line-height: 1;
-      transition: background-color 0.2s, border-color 0.2s;
-    }
-
-    .mode-label:hover {
-      border-color: var(--primary);
-      background: var(--bg-body);
-    }
-
-    .mode-label input {
-      margin: 0;
-      cursor: pointer;
-    }
-
-    /* --- LIST ITEMS --- */
-    .progress-track {
-      width: 100%;
-      height: 6px;
-      background: #e2e8f0;
-      border-radius: 3px;
-      margin-top: 8px;
-      overflow: hidden;
-      display: none;
-      /* Hiện khi chạy */
-    }
-
-    .progress-fill {
-      height: 100%;
-      background: var(--success);
-      width: 0%;
-      transition: width 0.3s ease;
-    }
-
-    /* --- TOAST NOTIFICATION --- */
-    #toast-container {
-      position: fixed;
-      top: 10px;
-      right: 10px;
-      z-index: 100;
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-    }
-
-    .toast {
-      padding: 10px 14px;
-      border-radius: 6px;
-      color: white;
-      font-weight: 500;
-      font-size: 12px;
-      box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
-      animation: slideIn 0.3s ease-out;
-      min-width: 200px;
-    }
-
-    @keyframes slideIn {
-      from {
-        transform: translateX(100%);
-        opacity: 0;
-      }
-
-      to {
-        transform: translateX(0);
-        opacity: 1;
-      }
-    }
-
-    .toast.success {
-      background: var(--success);
-    }
-
-    .toast.error {
-      background: var(--danger);
-    }
-
-    .toast.info {
-      background: var(--primary);
-    }
-
-    .toast.warning {
-      background: var(--warning);
-    }
-
-    /* --- TABLE & HELPERS --- */
-    .info-bar {
-      font-size: 11px;
-      background: #e0f2fe;
-      color: #0369a1;
-      padding: 6px 10px;
-      border-radius: var(--radius);
-      display: flex;
-      justify-content: space-between;
-      border: 1px solid #bae6fd;
-      margin-bottom: 8px;
-    }
-
-    .col-3-flex {
-      display: flex;
-      gap: 5px;
-    }
-
-    .col-3-flex input {
-      flex: 1;
-    }
-
-    .batch-container {
-      height: 220px;
-      overflow-y: auto;
-      border: 1px solid var(--border);
-      background: #fff;
-      margin-top: 5px;
-      border-radius: var(--radius);
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      font-size: 11px;
-    }
-
-    th {
-      position: sticky;
-      top: 0;
-      background: var(--bg-header);
-      text-align: left;
-      padding: 6px;
-      font-weight: 600;
-      border-bottom: 1px solid var(--border-table);
-      color: var(--text-main);
-    }
-
-    td {
-      padding: 6px;
-      border-bottom: 1px solid var(--border-table);
-      color: var(--text-main);
-    }
-
-    .note-box {
-      font-size: 11px;
-      color: var(--text-note);
-      background: var(--bg-note);
-      padding: 10px;
-      border-radius: var(--radius);
-      margin-top: 10px;
-      border: 1px dashed var(--border-table);
-      line-height: 1.4;
-    }
-
-    /* --- XPATH TAB Styles --- */
-    .xpath-status {
-      padding: 8px;
-      background: #eff6ff;
-      border: 1px solid #bae6fd;
-      border-radius: 6px;
-      margin-bottom: 12px;
-      font-weight: 600;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .guide-steps {
-      font-size: 12px;
-      line-height: 1.5;
-    }
-
-
-    .step {
-      margin-bottom: 6px;
-      padding-left: 20px;
-      position: relative;
-    }
-
-    .step:before {
-      content: "→";
-      position: absolute;
-      left: 0;
-      color: #10b981;
-      font-weight: bold;
-    }
-
-    .xpath-examples {
-      font-family: 'Courier New', monospace;
-      font-size: 11px;
-      background: #f8fafc;
-      padding: 10px;
-      border-radius: 6px;
-      margin-top: 10px;
-      border: 1px solid #e2e8f0;
-    }
-
-    /* --- THEME TOGGLE --- */
-    .theme-toggle {
-      width: 32px;
-      height: 32px;
-      border: none;
-      border-radius: 50%;
-      background: var(--bg-card);
-      border: 1px solid var(--border);
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      transition: all 0.2s;
-    }
-
-    .theme-toggle:hover {
-      background: var(--bg-body);
-      box-shadow: var(--shadow-sm);
-      transform: scale(1.05);
-    }
-
-    .theme-toggle svg {
-      width: 18px;
-      height: 18px;
-      color: var(--text-main);
-    }
-
-    /* Links */
-    a {
-      color: var(--link-color);
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-    /* AI Status */
-    .status-text-success {
-      color: var(--status-success) !important;
-      font-weight: 600;
-    }
-
-    .status-text-info {
-      color: var(--status-info) !important;
-      font-weight: 600;
-    }
-
-    .status-text-warning {
-      color: var(--status-warning) !important;
-      font-weight: 600;
-    }
-
-    .status-text-error {
-      color: var(--status-error) !important;
-      font-weight: 600;
-    }
-  </style>
+  <link rel="stylesheet" href="design-tokens.css">
+  <link rel="stylesheet" href="styles.css">
 
 
   <script src="papaparse.min.js"></script>
@@ -884,23 +188,27 @@
   </div>
 
   <div id="viewConfig" class="tab-content">
-    <!-- Theme Toggle Section -->
+    <!-- Theme & Font Config Section -->
     <div class="group-box">
-      <div class="group-title">🎨 Giao Diện</div>
-      <div style="display: flex; align-items: center; justify-content: space-between;">
-        <label>Chế độ tối (Dark Mode)</label>
-        <button id="themeToggle" class="theme-toggle">
-          <svg id="iconSun" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-            stroke="currentColor" style="width: 20px; height: 20px;">
-            <path stroke-linecap="round" stroke-linejoin="round"
-              d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z" />
-          </svg>
-          <svg id="iconMoon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-            stroke="currentColor" style="width: 20px; height: 20px; display:none;">
-            <path stroke-linecap="round" stroke-linejoin="round"
-              d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z" />
-          </svg>
-        </button>
+      <div class="group-title">🎨 Giao Diện & Cấu Hình</div>
+
+      <div class="control-row" style="align-items: center; margin-bottom: 12px;">
+        <label style="flex:1; font-weight: 500;">Giao diện (Theme):</label>
+        <select id="themeSelector" class="input-std" style="flex:1.5; margin-bottom:0;">
+          <option value="light">☀️ Light (Sáng)</option>
+          <option value="dark">🌙 Dark (Tối)</option>
+          <option value="midnight">🌌 Midnight (Đêm)</option>
+          <option value="forest">🌲 Forest (Rừng)</option>
+        </select>
+      </div>
+
+      <div class="control-row" style="align-items: center;">
+        <label style="flex:1; font-weight: 500;">Cỡ chữ (Font Size):</label>
+        <select id="fontSizeSelector" class="input-std" style="flex:1.5; margin-bottom:0;">
+          <option value="small">A- Nhỏ</option>
+          <option value="medium" selected>A Vừa (Mặc định)</option>
+          <option value="large">A+ Lớn</option>
+        </select>
       </div>
     </div>
     <div class="group-box">
